# Tree_class_for_cpp

./: CMakeLists.txt  README.md
.github/workflows/: run-tests.yml
lib/: Tree.h
src/: CMakeLists.txt  bootstrap.cpp  run.cpp
src/Staff/: Staff.cpp  Staff.h
test/: CMakeLists.txt  tree_test.cpp
